add pluggy connect

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raycast-pluggy-connect",
+  "name": "use-pluggy-connect",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,9 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "pluggy-connect-sdk": "^2.6.1",
+    "pluggy-js": "^0.16.0",
+    "pluggy-sdk": "^0.33.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
